---------------------------------------------------------------------------------------------------
Version: 0.0.34
  Changes:
	- started on function for global item recipe script
	- copied recipes for circuits 1 -3 in pyht to stop bobs electronics from overriding them
	- 
---------------------------------------------------------------------------------------------------
Version: 0.0.33
  Changes:
	- add code for bob compatibilty with pymods
	- organized bob changes so that should be able to load each module of bobs independently
---------------------------------------------------------------------------------------------------
Version: 0.0.32
  Changes:
	- made changes for bobextended to work with pyht.
	- removed optional dependency for omnipermute. it works for me so hopefully it doesnt cuase any errors
---------------------------------------------------------------------------------------------------
Version: 0.0.31
  Changes:
	- made some tweaks to spacex.lua to correct an error with omnipermute
---------------------------------------------------------------------------------------------------
Version: 0.0.30
  Changes:
	- Modified py difficultly adjuster script to account for mods having multiple results in normal and expensive recipes
	- fixed error in same script due to local for loop varible used outside of loop
---------------------------------------------------------------------------------------------------
Version: 0.0.29
  Changes:
	- Added a check to the py difficultly adjuster to avoid erroring out on recipes that dont have results to adjust
	- Changed the py difficultly adjuster script into a function that should be open for other mods to call to if they want
---------------------------------------------------------------------------------------------------
Version: 0.0.28
  Changes:
    - made adjustments to the paper to fiberboard recipes to be able to craft pcb1 with assember 2s